# icfpc2022

./: .gitignore  CMakeLists.txt  README.md  apiKey  apiKey2  auth  submit.py  submitterStatus.json
problems/: default.initial.json  download.py
solutions/best/: 1.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  38.txt  39.txt  4.txt  5.txt  7.txt  8.txt  9.txt
solutions/dp2_125/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  5.txt  6.txt  7.txt  8.txt  9.txt
solutions/dp2_4000/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  5.txt  6.txt  7.txt  8.txt  9.txt
solutions/dp2_450/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  (+15 more)
src/: block.h  canvas.cpp  canvas.h  cost.cpp  cost.h  evaluator.cpp  evaluator.h  image.cpp  image.h  main.cpp  move.cpp  move.h  pixel.h  problem.cpp  problem.h  settings.cpp  settings.h  solution.cpp  solution.h
(+512 files in other folders)
