cmake_minimum_required( VERSION 3.5 )
project( icfpc )
if (APPLE)
    set(CMAKE_C_COMPILER /opt/homebrew/bin/gcc-11)
    set(CMAKE_CXX_COMPILER /opt/homebrew/bin/g++-11)
endif (APPLE)
string( TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE_LOWERCASE )
set( CMAKE_CXX_STANDARD 14 )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_HOME_DIRECTORY}/${BUILD_TYPE_LOWERCASE}/build" )
set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra -Warray-bounds=0 -Werror=stringop-overflow=0" )
find_package( Threads )
find_package(ZLIB REQUIRED)

file( GLOB_RECURSE ICFPPC_2021_SOURCES RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/src/*.cpp" )
add_executable( icfpc ${ICFPPC_2021_SOURCES} )
target_link_libraries( icfpc ${CMAKE_THREAD_LIBS_INIT} ${ZLIB_LIBRARIES} )
target_include_directories(icfpc PRIVATE "${PROJECT_SOURCE_DIR}/src" )
